Bug 320394 - Kmplot crashed when opened "Edit Constants" from function editor recursively
Summary: Kmplot crashed when opened "Edit Constants" from function editor recursively
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.2.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-28 16:40 UTC by erikkonstas
Modified: 2018-11-16 19:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description erikkonstas 2013-05-28 16:40:22 UTC
Application: kmplot (1.2.1)
KDE Platform Version: 4.9.5
Qt Version: 4.8.3
Operating System: Linux 3.5.0-25-generic x86_64
Distribution: Ubuntu 12.10

-- Information about the crash:
- What I was doing when the application crashed:

I've open "Edit Variables", then I opened again "Edit equalizations" then I tried to open again "Edit Variables" and the application crashed.

-- Backtrace:
Application: KmPlot (kmplot), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa243672780 (LWP 17415))]

Thread 2 (Thread 0x7fa22e573700 (LWP 17418)):
#0  0x00007fa2408c2313 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fa23d4c1d84 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa23d4c21e2 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa2369cb4a6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007fa23d4e5645 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fa23d990e9a in start_thread (arg=0x7fa22e573700) at pthread_create.c:308
#6  0x00007fa2408cdccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fa243672780 (LWP 17415)):
[KCrash Handler]
#5  0x0000000002df46c0 in ?? ()
#6  0x00007fa241c71e9c in QApplicationPrivate::notify_helper (this=this@entry=0x24a5ca0, receiver=receiver@entry=0x2edafd0, e=e@entry=0x7fff85752700) at kernel/qapplication.cpp:4562
#7  0x00007fa241c7630a in QApplication::notify (this=0x7fff85756aa0, receiver=0x2edafd0, e=0x7fff85752700) at kernel/qapplication.cpp:4423
#8  0x00007fa24297a1f6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#9  0x00007fa24128f56e in QCoreApplication::notifyInternal (this=0x7fff85756aa0, receiver=0x2edafd0, event=0x7fff85752700) at kernel/qcoreapplication.cpp:915
#10 0x00007fa241cc48bb in sendEvent (event=0x7fff85752700, receiver=0x2edafd0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#11 QWidget::setParent (this=0x2ed8550, parent=parent@entry=0x2edafd0, f=...) at kernel/qwidget.cpp:10265
#12 0x00007fa241cc4e83 in QWidgetPrivate::init (this=0x305a9d0, parentWidget=<optimized out>, parentWidget@entry=0x2edafd0, f=...) at kernel/qwidget.cpp:1370
#13 0x00007fa241cc5212 in QWidget::QWidget (this=0x2ed8550, dd=..., parent=0x2edafd0, f=...) at kernel/qwidget.cpp:1205
#14 0x00007fa242129f9f in QDialog::QDialog (this=0x2ed8550, parent=0x2edafd0, f=...) at dialogs/qdialog.cpp:261
#15 0x00007fa2428dc5c9 in KDialog::KDialog(QWidget*, QFlags<Qt::WindowType>) () from /usr/lib/libkdeui.so.5
#16 0x00007fa22483f5eb in ?? () from /usr/lib/kde4/libkmplotpart.so
#17 0x00007fa224831f83 in ?? () from /usr/lib/kde4/libkmplotpart.so
#18 0x00007fa2412a4f5f in QMetaObject::activate (sender=0x2de9800, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff85752a50) at kernel/qobject.cpp:3547
#19 0x00007fa2422dc422 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#20 0x00007fa24202fd2e in QAbstractButtonPrivate::emitClicked (this=this@entry=0x2dcdc50) at widgets/qabstractbutton.cpp:548
#21 0x00007fa242030560 in QAbstractButtonPrivate::click (this=this@entry=0x2dcdc50) at widgets/qabstractbutton.cpp:541
#22 0x00007fa2420307cc in QAbstractButton::mouseReleaseEvent (this=0x2de9800, e=0x7fff857532f0) at widgets/qabstractbutton.cpp:1123
#23 0x00007fa241cc1850 in QWidget::event (this=0x2de9800, event=0x7fff857532f0) at kernel/qwidget.cpp:8371
#24 0x00007fa241c71e9c in QApplicationPrivate::notify_helper (this=this@entry=0x24a5ca0, receiver=receiver@entry=0x2de9800, e=e@entry=0x7fff857532f0) at kernel/qapplication.cpp:4562
#25 0x00007fa241c76b6b in QApplication::notify (this=<optimized out>, receiver=0x2de9800, e=0x7fff857532f0) at kernel/qapplication.cpp:4105
#26 0x00007fa24297a1f6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#27 0x00007fa24128f56e in QCoreApplication::notifyInternal (this=0x7fff85756aa0, receiver=0x2de9800, event=0x7fff857532f0) at kernel/qcoreapplication.cpp:915
#28 0x00007fa241c72cd3 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#29 QApplicationPrivate::sendMouseEvent (receiver=0x2de9800, event=0x7fff857532f0, alienWidget=0x2de9800, nativeWidget=0x2ebdc00, buttonDown=0x7fa24274e308 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3173
#30 0x00007fa241cf0554 in QETWidget::translateMouseEvent (this=this@entry=0x2ebdc00, event=event@entry=0x7fff85753a70) at kernel/qapplication_x11.cpp:4622
#31 0x00007fa241cef44f in QApplication::x11ProcessEvent (this=0x7fff85756aa0, event=0x7fff85753a70) at kernel/qapplication_x11.cpp:3737
#32 0x00007fa241d16fa2 in x11EventSourceDispatch (s=0x24a6240, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x00007fa23d4c1ab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007fa23d4c1de8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fa23d4c1ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fa2412bdbf6 in QEventDispatcherGlib::processEvents (this=0x247ab30, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#37 0x00007fa241d16c1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007fa24128e2bf in QEventLoop::processEvents (this=this@entry=0x7fff85753e50, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007fa24128e548 in QEventLoop::exec (this=0x7fff85753e50, flags=...) at kernel/qeventloop.cpp:204
#40 0x00007fa24212a428 in QDialog::exec (this=0x2ebdc00) at dialogs/qdialog.cpp:554
#41 0x00007fa22481286f in ?? () from /usr/lib/kde4/libkmplotpart.so
#42 0x00007fa2412a4f5f in QMetaObject::activate (sender=0x2df1e00, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff85753ff0) at kernel/qobject.cpp:3547
#43 0x00007fa2422dc422 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#44 0x00007fa24202fd2e in QAbstractButtonPrivate::emitClicked (this=this@entry=0x2e05cb0) at widgets/qabstractbutton.cpp:548
#45 0x00007fa242030560 in QAbstractButtonPrivate::click (this=this@entry=0x2e05cb0) at widgets/qabstractbutton.cpp:541
#46 0x00007fa2420307cc in QAbstractButton::mouseReleaseEvent (this=0x2df1e00, e=0x7fff85754890) at widgets/qabstractbutton.cpp:1123
#47 0x00007fa241cc1850 in QWidget::event (this=0x2df1e00, event=0x7fff85754890) at kernel/qwidget.cpp:8371
#48 0x00007fa241c71e9c in QApplicationPrivate::notify_helper (this=this@entry=0x24a5ca0, receiver=receiver@entry=0x2df1e00, e=e@entry=0x7fff85754890) at kernel/qapplication.cpp:4562
#49 0x00007fa241c76b6b in QApplication::notify (this=<optimized out>, receiver=0x2df1e00, e=0x7fff85754890) at kernel/qapplication.cpp:4105
#50 0x00007fa24297a1f6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#51 0x00007fa24128f56e in QCoreApplication::notifyInternal (this=0x7fff85756aa0, receiver=0x2df1e00, event=0x7fff85754890) at kernel/qcoreapplication.cpp:915
#52 0x00007fa241c72cd3 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#53 QApplicationPrivate::sendMouseEvent (receiver=0x2df1e00, event=0x7fff85754890, alienWidget=0x2df1e00, nativeWidget=0x2ed8550, buttonDown=0x7fa24274e308 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3173
#54 0x00007fa241cf0554 in QETWidget::translateMouseEvent (this=this@entry=0x2ed8550, event=event@entry=0x7fff85755010) at kernel/qapplication_x11.cpp:4622
#55 0x00007fa241cef44f in QApplication::x11ProcessEvent (this=0x7fff85756aa0, event=0x7fff85755010) at kernel/qapplication_x11.cpp:3737
#56 0x00007fa241d16fa2 in x11EventSourceDispatch (s=0x24a6240, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#57 0x00007fa23d4c1ab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#58 0x00007fa23d4c1de8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#59 0x00007fa23d4c1ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#60 0x00007fa2412bdc16 in QEventDispatcherGlib::processEvents (this=0x247ab30, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#61 0x00007fa241d16c1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#62 0x00007fa24128e2bf in QEventLoop::processEvents (this=this@entry=0x7fff857553f0, flags=...) at kernel/qeventloop.cpp:149
#63 0x00007fa24128e548 in QEventLoop::exec (this=0x7fff857553f0, flags=...) at kernel/qeventloop.cpp:204
#64 0x00007fa24212a428 in QDialog::exec (this=0x2ffa4d0) at dialogs/qdialog.cpp:554
#65 0x00007fa22481286f in ?? () from /usr/lib/kde4/libkmplotpart.so
#66 0x00007fa2412a4f5f in QMetaObject::activate (sender=0x287f230, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff85755590) at kernel/qobject.cpp:3547
#67 0x00007fa2422dc422 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#68 0x00007fa24202fd2e in QAbstractButtonPrivate::emitClicked (this=this@entry=0x2888fc0) at widgets/qabstractbutton.cpp:548
#69 0x00007fa242030560 in QAbstractButtonPrivate::click (this=this@entry=0x2888fc0) at widgets/qabstractbutton.cpp:541
#70 0x00007fa2420307cc in QAbstractButton::mouseReleaseEvent (this=0x287f230, e=0x7fff85755e30) at widgets/qabstractbutton.cpp:1123
#71 0x00007fa241cc1850 in QWidget::event (this=0x287f230, event=0x7fff85755e30) at kernel/qwidget.cpp:8371
#72 0x00007fa241c71e9c in QApplicationPrivate::notify_helper (this=this@entry=0x24a5ca0, receiver=receiver@entry=0x287f230, e=e@entry=0x7fff85755e30) at kernel/qapplication.cpp:4562
#73 0x00007fa241c76b6b in QApplication::notify (this=<optimized out>, receiver=0x287f230, e=0x7fff85755e30) at kernel/qapplication.cpp:4105
#74 0x00007fa24297a1f6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#75 0x00007fa24128f56e in QCoreApplication::notifyInternal (this=0x7fff85756aa0, receiver=0x287f230, event=0x7fff85755e30) at kernel/qcoreapplication.cpp:915
#76 0x00007fa241c72cd3 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#77 QApplicationPrivate::sendMouseEvent (receiver=0x287f230, event=0x7fff85755e30, alienWidget=0x0, nativeWidget=0x287f230, buttonDown=0x7fa24274e308 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3173
#78 0x00007fa241cf0554 in QETWidget::translateMouseEvent (this=this@entry=0x287f230, event=event@entry=0x7fff857565b0) at kernel/qapplication_x11.cpp:4622
#79 0x00007fa241cef44f in QApplication::x11ProcessEvent (this=0x7fff85756aa0, event=0x7fff857565b0) at kernel/qapplication_x11.cpp:3737
#80 0x00007fa241d16fa2 in x11EventSourceDispatch (s=0x24a6240, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#81 0x00007fa23d4c1ab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#82 0x00007fa23d4c1de8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#83 0x00007fa23d4c1ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#84 0x00007fa2412bdc16 in QEventDispatcherGlib::processEvents (this=0x247ab30, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#85 0x00007fa241d16c1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#86 0x00007fa24128e2bf in QEventLoop::processEvents (this=this@entry=0x7fff85756980, flags=...) at kernel/qeventloop.cpp:149
#87 0x00007fa24128e548 in QEventLoop::exec (this=0x7fff85756980, flags=...) at kernel/qeventloop.cpp:204
#88 0x00007fa241293708 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#89 0x0000000000408a4d in ?? ()
#90 0x00007fa2407fb76d in __libc_start_main (main=0x408430, argc=1, ubp_av=0x7fff85756bd8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff85756bc8) at libc-start.c:226
#91 0x0000000000408ab1 in _start ()

Possible duplicates by query: bug 320386, bug 320316, bug 320306, bug 320272, bug 320175.

Reported using DrKonqi
Comment 1 Yuri Chornoivan 2018-11-16 13:19:37 UTC
I cannot reproduce the crash with the current self-compiled KmPlot from git master (1.2.2, Applications 18.12, KF 5.42 or 5.50, Qt 5.9 or 5.11).

Can somebody test if the crash still occurs?

Many thanks in advance for your help.
Comment 2 Christoph Feck 2018-11-16 13:46:25 UTC
Still reproducible with today's master.

- Menu > Edit > Constants...
- Click on "Edit Expression" toolbutton next to "Value"
- in the Expression editor, click "Edit Constants..."
Comment 3 Yuri Chornoivan 2018-11-16 19:01:52 UTC
Git commit af7512b365db62fb670753168a762eca551ae100 by Yuri Chornoivan.
Committed on 16/11/2018 at 19:01.
Pushed by yurchor into branch 'Applications/18.12'.

Do not delete parent widgets

M  +6    -2    kmplot/maindlg.cpp

https://commits.kde.org/kmplot/af7512b365db62fb670753168a762eca551ae100