Do not delete parent widgets

BUG: 320394